[package]
name = "integral_ads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json", "native-tls"] }
serde = { version = "1.0.198", features = ["serde_derive", "alloc", "std"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
once_cell = "1.19.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
